--- a/css/styles.css
+++ b/css/styles.css
@@ -4,4 +4,13 @@
 
 img {
   text-align: center;
+  opacity: 0.6;
+}
+
+body {
+  background: linear-gradient(to right,blue,white,white,white,white,blue);
+}
+
+.title {
+  text-shadow: 1px 1px 9px blue;
 }
